--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -370,7 +370,10 @@
 
 /* see more.js */
 .see-more {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   margin-top: 30px;
 }
 
