--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -56,6 +56,33 @@
   padding: 0px 10px;
 }
 
+/* all */
+/* all */
+/* all */
+/* all */
+/* all */
+.all {
+  font-family: Source Sans Pro, Helvetica, Arial, sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 17px;
+  padding: 20px;
+  color: #444;
+}
+
+.all button {
+  cursor: pointer;
+  font-family: Roboto, Arial, sans-serif;
+  background-color: red;
+  color: white;
+  border: 1px solid red;
+  border-radius: 20px;
+  padding: 10px 20px;
+  font-size: 16px;
+}
+
 /* others - dev.js */
 /* others - dev.js */
 /* others - dev.js */
