--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -69,7 +69,14 @@
   flex-direction: column;
   font-size: 17px;
   padding: 20px;
+  margin-top: 50px;
   color: #444;
+}
+
+.all p {
+  
+  font-size: 17px;
+  padding: 15px 0px;
 }
 
 .all button {
@@ -80,7 +87,8 @@
   border: 1px solid red;
   border-radius: 20px;
   padding: 10px 20px;
-  font-size: 16px;
+  margin-top: 50px;
+  font-size: 15px;
 }
 
 /* others - dev.js */
