--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -91,6 +91,46 @@
   margin-top: 50px;
   font-size: 15px;
 }
+/* translation.js */
+/* translation.js */
+/* translation.js */
+/* translation.js */
+/* translation.js */
+/* translation.js */
+
+.translation .button .btn-active{
+  font-family: Roboto, Arial, sans-serif;
+	text-decoration: none; 
+	cursor: pointer; 
+	color: #f5f5f5; 
+	background-color: red; 
+	border-radius: 5px; 
+	border: none;
+	font-size: 15px; 
+	padding: 6px 18px;
+}
+
+.translation .button .btn {
+  font-family: Roboto, Arial, sans-serif;
+	text-decoration: none; 
+	cursor: pointer; 
+	color: #ccc; 
+	background-color: #eee; 
+	border-radius: 5px; 
+	border: none;
+	font-size: 15px; 
+	padding: 6px 18px;
+}
+
+.translation .button button:active {
+  font-family: Roboto, Arial, sans-serif;
+  color: white;
+	background-color: #ff9191;
+	box-shadow: 0 5px #666;
+	transform: translateY(4px);
+}
+
+
 
 /* others - dev.js */
 /* others - dev.js */
